src/objects/POS_Revenue_Center__c.object
<CustomObject>
    <fields>
        <fullName>c_current_flag__c</fullName>
        <label>Current flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_cd__c</fullName>
        <label>Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_desc__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Pos_Revenue_Center</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_effective_end_dt__c</fullName>
        <label>Effective end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_effective_start_dt__c</fullName>
        <label>Effective start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>POS Revenue Center</label>
    <nameField>
        <displayFormat>PRC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Revenue Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>